Disable bootswatch by default

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -6,8 +6,9 @@
 // Import bootstrap and bootswatch. Replace "superhero" below with any
 // other bootswatch theme name (see https://bootswatch.com/), or remove
 // the bootswatch lines for default theme.
-@import "~bootswatch/dist/superhero/variables";
+
+// @import "~bootswatch/dist/superhero/variables";
 @import "~bootstrap/scss/bootstrap";
-@import "~bootswatch/dist/superhero/bootswatch";
+// @import "~bootswatch/dist/superhero/bootswatch";
 
 // Add other customizations below.
